<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MarathonApp</string>
    <string name="login_welcome">Welcome to MarathonApp</string>
    <string name="action_settings">Settings</string>
    <string name="login_prompt">Please login</string>
    <string name="register_prompt">Or register</string>
    <string name="login_button">Login!</string>
    <string name="register_button">Register!</string>
    <string name="title_activity_list_nonprofits">ListNonprofits</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_skills">SkillsActivity</string>
    <string name="user_info">User Info</string>
    <string name="user_name">Username: </string>
	<string name="location">Location</string>
	<string name="radius">Find Events within</string>
	<string name="miles">miles</string>
	<string name="txtDescription">Get matched up with volunteering opportunities that meet your skills and interests. Allow us to help you help others.</string>
	<string name="password_prompt">Password: </string>
	
	<!-- The following are strings used in the homepage screen -->
    <string name="txtHomepage">MarathonMatch</string>
	<string name ="txtUser">My Profile</string>
	<string name="txtNonprof">Organizations</string>
	<string name="txtSkills">My Skills</string>
	<string name="txtMyEvents">My Upcoming Events</string>
	
	  <!-- Application identifiers -->
   <string name="app_tag">LocationUpdates</string>
   <string name="app_description">
       Displays current address and current or updated location using Location Services
   </string>

   <!-- User interface labels and strings -->

   <!-- Address format -->
   <string name="address_output_string">%1$s %2$s %3$s</string>

   <!-- Latitude, longitude format -->
   <string name="latitude_longitude">%1$.8f, %2$.8f</string>


   <!-- Labels -->
   <string name="latlng">Lat/Long:</string>
   <string name="address">Address:</string>

   <!-- Messages -->
   <string name="connected">Client connected</string>
   <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
   <string name="connection_failed">Connection failed</string>
   <string name="disconnected">Client disconnected</string>
   <string name="get_address">Get Address</string>
   <string name="get_location">Get Location</string>
   <string name="get_distance">Get Distance</string>
   <string name="illegal_argument_exception">
       Illegal arguments: Latitude %1$.8f Longitude %2$.8f
   </string>
   <string name="invalid_action">Invalid intent action %1$s</string>
   <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
   <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
   <string name="location_requested">Periodic updates requested</string>
   <string name="location_updated">Location updated</string>
   <string name="location_update_error">Location update failed</string>
   <string name="location_update_error_detail">
       Location update error. code %1$d message %2$s
   </string>
   <string name="location_update_missing_update">
       Location update error. No incoming location.
   </string>
   <string name="location_updates_stopped">Periodic updates stopped</string>
   <string name="log_new_location">New location: %1$s</string>
   <string name="no_address_found">No address found for location</string>
	
</resources>
